--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.5",
+    "reactjs-editor": "^10.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
