change in extension

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "components/BookCard.tsx"
+    "components/BookCard.tsx",
+    "components/Header.jsx"
   ],
   "exclude": ["node_modules"]
 }
